# cpp_game

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.s  mm  notes.md
include/: camera.h  logging.hpp  menu.h  model.h  render.h  tetris.h  three.h  threed.h  twod.h  twod.hpp  util.h  util.hpp  world.h  world.hpp
include/glad/: glad.h
resources/shaders/: default3D.fs  default3D.vs  simp.fs  simp.vs  threed_cube.fs  threed_simple_light.vs  twod_rec_rounded.vs  twod_rounded_corners.fs  twod_rounded_corners.vs  twod_simp.fs  twod_simp.vs  twod_simp_circ.fs  twod_simp_circ.vs  twod_tex.fs  twod_tex.vs  twod_text.fs  twod_text.vs
src/: camera.cpp  glad.cpp  logging.cpp  main.cpp  maze.cpp  menu.cpp  render.cpp  tetris.cpp  threed.cpp  twod.cpp  util.cpp  world.cpp
